# SimulatePaxos

./: Dockerfile  README.md  docker-compose.yml  init.sh  pyproject.toml  send_request.sh
app/: config.py  main.py  messages.py
